--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "backend song application",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "server": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
